fix overflow

--- a/src/components/Preview/preview.module.css
+++ b/src/components/Preview/preview.module.css
@@ -2,6 +2,7 @@
   font-family: monospace;
   white-space: pre-wrap;
   background: #111;
+  overflow-x: scroll;
 }
 
 .preview .matched {
